2010-04-03  Michael Wiegand <michael.wiegand@intevation.de>

	* MANIFEST: Added missing files.

	* ChangeLog: Tidied last entry.

2010-04-02  Preeti Subramanian <spreeti@secpod.com>

	Packet Forgery support for IPv6.

	* nasl/capture_packet.c (init_v6_capture_device)
	(capture_next_v6_packet): Added new functions.

	* nasl/capture_packet.h (init_v6_capture_device)
	(capture_next_v6_packet): Added new functions.

	* nasl/nasl_packet_forgery.c (nasl_tcp_ping, nasl_pcap_next)
	(nasl_send_capture): Modified to support IPv6.

	* nasl/nasl_packet_forgery_v6.c: Added new module.

	* nasl/nasl_packet_forgery_v6.h: Added new.

	* nasl/CMakeLists.txt: Included nasl_packet_forgery_v6.c.

	* nasl/nasl_init.c: Updated newly added functions from
	nasl_packet_forgery_v6.c

2010-03-31  Michael Wiegand <michael.wiegand@intevation.de>

	* misc/store.c (store_load_plugin): Load tags and xrefs into the arglist
	if they are set in the NVTi cache. Removed obsolete TODO.

2010-03-25  Tim Brown <timb@openvas.org>

	* openvas-libraries/misc/ids_send.c: Fixed uninitialised variable.

2010-03-25  Matthew Mundell <matthew.mundell@intevation.de>

	* omp/omp.c (omp_resume_or_start_task_report, omp_resume_or_start_task):
	New functions.

	* omp/omp.h: Add headers accordingly.

2010-03-24  Michael Wiegand <michael.wiegand@intevation.de>

	Moved installation of header files away from top level Makefile and
	into the CMakeLists.txt of the individual modules.

	* omp/CMakeLists.txt, misc/CMakeLists.txt, nasl/CMakeLists.txt,
	hg/CMakeLists.txt, base/CMakeLists.txt: Added handling of header
	installation.

	* Makefile: Removed handling of header file installation for individual
	modules.

2010-03-23  Michael Wiegand <michael.wiegand@intevation.de>

	Fixed some library paths that broke linking.

	* omp/CMakeLists.txt: Removed superfluous .libs from link_directories.

	* nasl/CMakeLists.txt: Fixed IMPORTED_LOCATION for libopenvas_hg and
	libopenvas_base, corrected order of set_property.
