@@ -1,3 +1,9 @@
+2010-04-08  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* include/includes.h, misc/pcap.c, misc/plugutils.c,
+	misc/hlst.c, nasl/includes.h: Removed code path
+	for "USE_PTHREADS". It was never active anyway.
+
 2010-04-03  Michael Wiegand <michael.wiegand@intevation.de>
 
 	* MANIFEST: Added missing files.
